--- a/src/main/resources/templates/cliente/index.html
+++ b/src/main/resources/templates/cliente/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+	<head th:include="layout :: htmlhead"></head>
 	<body>
+	<div class="container">
+		<nav th:replace="layout :: menu">(menu)</nav>
+		<a href="form.html" th:href="@{/cliente/novo}" class="btn btn-primary btn-lg" role="button">Novo</a>
 		<table class="table">
 			<thead class="thead-light"> 
 				<tr>
 					<th scope="col">Nome</th>
+					<th scope="col">Endereço</th>
+					<th scope="col">Data de Nascimento</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr scope="row" th:each="umcliente : ${clientes}">
 					<td th:text="${umcliente.nome}"></td>
+					<td th:text="${umcliente.endereco}"></td>
+					<td th:text="${umcliente.dataNascimento}"></td>
 				</tr>
 			</tbody>
 		</table>
+		</div>
+		<div th:include="layout :: footer" id="footer">(footer)</div>
 	</body>
 </html>
