--- a/src/main/resources/templates/cliente/index.html
+++ b/src/main/resources/templates/cliente/index.html
@@ -5,12 +5,13 @@
 	<div class="container">
 		<nav th:replace="layout :: menu">(menu)</nav>
 		<a href="form.html" th:href="@{/cliente/novo}" class="btn btn-primary btn-lg" role="button">Novo</a>
-		<table class="table">
+		<table class="table" id="clientes">
 			<thead class="thead-light"> 
 				<tr>
 					<th scope="col">Nome</th>
 					<th scope="col">Endereço</th>
-					<th scope="col">Data de Nascimento</th>
+					<th scope="col">Data Nascimento</th>
+					<th scope="col"></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -18,10 +19,36 @@
 					<td th:text="${umcliente.nome}"></td>
 					<td th:text="${umcliente.endereco}"></td>
 					<td th:text="${umcliente.dataNascimento}"></td>
+					<td><a th:href="@{'/cliente/alterar/' + ${umcliente.id}}" class="btn btn-primary btn-lg">Alterar</a>
+					<button class='btn btn-second btn-lg js-delete'th:data-customer-id="@{umcliente.id}">Delete</button></td>
 				</tr>
 			</tbody>
 		</table>
 		</div>
 		<div th:include="layout :: footer" id="footer">(footer)</div>
+		
+		<script type="text/javascript">
+			$(document).ready(function(){
+				$("#clientes").on("click", ".js-delete", function () {
+					var button = $(this);
+					
+					bootbox.confirm("Tem certeza que deseja excluir este cliente?", 
+							function (result){
+						if (result) {
+							$.ajax({
+								url: "/cliente/remover/" +
+									button.attr("data-customer-id"),
+								method:"GET",
+								success: function () {
+									window.location.href = "/cliente"
+								}
+							});
+						}
+						
+					});
+				});
+			});
+		</script>
+		
 	</body>
 </html>
